RESOLVED FIXED285177
Unreviewed Catalyst build fix after 288301@main
https://bugs.webkit.org/show_bug.cgi?id=285177
Summary Unreviewed Catalyst build fix after 288301@main
Chris Dumez
Reported 2024-12-26 17:42:43 PST
Build fix after 288301@main.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-26 17:42:52 PST
Chris Dumez
Comment 2 2024-12-26 17:43:39 PST
EWS
Comment 3 2024-12-26 19:19:51 PST
Committed 288304@main (d1d90333a727): <https://commits.webkit.org/288304@main> Reviewed commits have been landed. Closing PR #38392 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.