Unreviewed Catalyst build fix after 288301@main https://bugs.webkit.org/show_bug.cgi?id=285177 rdar://142078583

* Source/WebCore/PAL/pal/spi/mac/HIServicesSPI.h:

Canonical link: https://commits.webkit.org/288304@main